# skewlab

./: .gitignore  README.md  pyproject.toml  requirements.txt  skewlab.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  METHODOLOGY.md
skewlab/: __init__.py  _smoke.py  analysis.py  app.py  config.py  data.py  inspect.py  model.py  positions.py  run.py  theme.py
skewlab/charts/: __init__.py  curve.py  distribution.py  iv_history.py  pnl.py  position.py  rv_vs_iv.py  spreads.py  strike_vol_change.py  vix_distribution.py  vol_history.py  vvix_vix_ratio.py
skewlab/pipeline/: __init__.py  demo.py
tests/: conftest.py  test_model.py  test_pipeline_demo.py  test_projection.py
